# CK-BE

./: .gitignore  .travis.yml  CustomVisitor.py  Dockerfile  EdgeCreator.py  JSONToSourceCodeConverter.py  NodeEditVerifier.py  NodeEditor.py  NodeToJSONConverter.py  Parsing Algorithm.py  README.md  docker-compose.yml  example.env  example_return.json  mongodb.py  pyproject.toml  requirements.txt  sonar-project.properties  test_exec.py  test_executor.py
.github/workflows/: python-app.yml
app/: main.py
app/api/api_v1/: api.py  command.py  customer.py  history.py  user.py
app/controllers/: command_controller.py
app/crud/: __init__.py  base.py  crud_command.py  crud_command_data.py  crud_edge.py  crud_history.py  crud_node.py  crud_set.py  crud_user.py  crud_variable.py
app/models/: base64.py  command.py  command_data.py  edge.py  history.py  node.py  set.py  user.py  variable.py  variables.py
app/services/: edge_creator.py  edgecreator.py  executor.py  json_to_source_code_converter.py  jupter_executor.py  jupyter_executor.py  lib_cst.py  node_editor.py  node_nester.py  node_to_json.py  nodetojson.py  parser.py  variable_transformer.py  visitor.py
app/tests/: conftest.py  test_base64.py  test_edgecreator.py  test_exec.py  test_executor.py  test_jsontosourcecodeconverter.py  test_jupyter.py  test_jupyter_executor.py  test_main.py  test_node_nester.py  test_nodeditor.py  test_nodetojson.py  test_parser.py  test_variable_transformer.py
app/tests/api/: test_commander.py  test_customer.py
app/utils/: config.py  deps.py
data/: appendonly.aof  dump.rdb
(+5 files in other folders)
