[tool.poetry]
name = "ck-be"
version = "0.1.0"
description = "A FastAPI backend for Coding Kittens"
authors = ["Matthew Aylward <matthewtyleraylward@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
pytest = "^7.1.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
